--- a/fly.toml
+++ b/fly.toml
@@ -1,23 +1,11 @@
 app = "bybit-bot"
+primary_region = "sin"
 
 [build]
   builder = "paketobuildpacks/builder:base"
 
 [env]
-  PORT = "8080"
+  PYTHONUNBUFFERED = "true"
 
-[[services]]
-  internal_port = 8080
-  protocol = "tcp"
-
-  [[services.ports]]
-    handlers = ["http"]
-    port = 80
-
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
-
-  [[services.tcp_checks]]
-    interval = "15s"
-    timeout = "2s"
+[experimental]
+  auto_rollback = true
